v, 1.12, May 1, 1997  

o added call_anon example

o update examples to use new perl_eval_pv() function.

o sync Embed.pm with perl5.003_94

o fixed broken eg/regex.c spotted by Larry W. Virden

v, 1.11, March 10, 1997  

o extended test suite to test perl_destruct_level=1 with
  a looping perl_alloc..perl_free, along with a MULTIPLICITY 
  test. 	

o extra linker args (after `--') may now include -lperl\w+ to
  override -lperl with -lperlm, -lperld or some such

v, 1.10, January 29, 1997

o updated genmake to use re-worked ccopts/ldopts

o $Config{ccdlflags} is now part of ldopts instead of ccopts

o new scripts for building/cleaning examples

o added new examples from perlembed updates:
  eg/persistent.*
  eg/multiplicity.c
  eg/morethanonce.c

o cleaned up existing examples to reflect recent perlembed changes

o added pointer to INN and ePerl (eg/README)

v, 1.09, November 29, 1996 

o applied patchlet from Andreas Koenig to s/archlib/archlibexp/

o updated eg/README

v, 1.08, November 27, 1996 

o eg/build is now a perl script, not a shell script

o renamed genmake.pl to genmake so it doesn't end up in site_perl

o added new examples to eg/, uri-url.c and regex.c/regex.pl

o 'make clean' now cleans the t/ directory

o applied patch from Sven Verdoolaege <skimo@breughel.ufsia.ac.be>
  to remove space in perl_inc

v, 1.07, July 21, 1996

o renamed to ExtUtils::Embed (last name change I swear!)
  ExtUtils::Embed will be part of the standard Perl distribution
  as of 5.003_01

o fixed typo in @EXPORT

v, 1.06, July 14, 1996

o applied patch from Andreas Koenig <k@anna.in-berlin.de> to fix
  bug with NeXT systems

v, 1.05, July 2, 1996

o Object for accessing MakeMaker methods now blessed into 'MY' class to avoid warnings

o Updated documentation a bit

v, 1.04, June 17, 1996

o Added perl_inc, ccflags, ccdlflags and ccopts functions

o Added eg/ directory with examples from the perlembed manpage

v, 1.03, June 10, 1996
