@@ -1,3 +1,3 @@
-
-system "t/embed", "t/embed.pl";
+chdir "t" if -d "t";
+system "embed", "embed.pl";
 
